<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_tv_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/base_color_blue"
        android:gravity="center"
        android:text="@string/dialog_photo_select"
        android:textColor="#ffffff"
        android:textSize="22sp"
        />

    <TextView
        android:id="@+id/dialog_take_photo"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/dialog_photo_select_mode_camera"
        android:textColor="#000000"
        android:textSize="18sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentBottom="true"
        android:background="@color/divide_line_color"/>


    <TextView
        android:id="@+id/dialog_select_photo"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/dialog_photo_select_mode_gallery"
        android:textColor="#000000"
        android:textSize="18sp"
        />

</LinearLayout>