<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/divide_line_color"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/feedback_suggestion"
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_feedback_edittext_bg"
                android:gravity="top"
                android:hint="@string/feedback_edittext_hint_suggestion"
                android:maxLength="500"
                android:padding="20dp"
                android:textColor="@color/edit_normal_text_color"
                android:textColorHint="@color/edit_hint_text_color"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_size_small"/>

            <EditText
                android:id="@+id/feedback_contact"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/selector_feedback_edittext_bg"
                android:hint="@string/feedback_edittext_hint_contact"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:textColor="@color/edit_normal_text_color"
                android:textColorHint="@color/edit_hint_text_color"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_size_small"/>

            <Button
                android:id="@+id/feedback_commit"
                style="@style/ButtonRoundBackgroundSelector"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/btn_commit"/>

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/error_layout"
        layout="@layout/layout_common_error_page"
        android:visibility="gone"/>
</LinearLayout>