<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/root"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/base_color_white"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divide_line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="54dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/forget_pwd_name"
                android:layout_width="fill_parent"
                android:layout_height="34dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/hint_fill_phone_number"
                android:inputType="phone"
                android:lines="1"
                android:maxLength="11"
                android:textColor="@color/edit_normal_text_color"
                android:textColorHint="@color/edit_hint_text_color"
                android:textCursorDrawable="@null"
                android:textSize="15sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide_line_color"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/forget_get_verfy_code"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/btn_get_verifycode"
                android:lines="1"
                android:minWidth="60dp"
                android:textColor="@color/text_blue"
                android:textColorHint="@color/text_blue"
                android:textSize="@dimen/text_size_small"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/button_normal_background_color"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="41dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/forget_pwd_verfy_code"
                android:layout_width="fill_parent"
                android:layout_height="34dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/hint_fill_vertifycode"
                android:inputType="number"
                android:lines="1"
                android:textColor="@color/edit_normal_text_color"
                android:textColorHint="@color/edit_hint_text_color"
                android:textCursorDrawable="@null"
                android:textSize="15sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide_line_color"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="41dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/reset_password"
                android:layout_width="fill_parent"
                android:layout_height="34dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/hint_fill_password"
                android:inputType="textPassword"
                android:lines="1"
                android:textColor="@color/edit_normal_text_color"
                android:textColorHint="@color/edit_hint_text_color"
                android:textCursorDrawable="@null"
                android:textSize="15sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide_line_color"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/forget_pwd_btn"
        style="@style/ButtonRoundBackgroundSelector"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="58dp"
        android:text="@string/forget_password_btn_finish"/>

    <include
        android:id="@+id/error_layout"
        layout="@layout/layout_common_error_page"
        android:visibility="gone"/>

</LinearLayout>